--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "mongoose": "^9.0.0",
-    "morgan": "^1.10.1",
-    "nodemon": "^3.1.11"
-  }
+"name": "event-backend",
+"version": "1.0.0",
+"type": "module",
+"scripts": {
+"start": "node server.js",
+"dev": "nodemon server.js"
+},
+"dependencies": {
+"express": "^4.18.2",
+"mongoose": "^7.5.0",
+"dotenv": "^16.1.4",
+"cors": "^2.8.5",
+"morgan": "^1.10.0"
+},
+"devDependencies": { "nodemon": "^2.0.22" }
 }
